# kapy-lite

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
sample/: sample_by_iphone15-pro-max.heic
src/: config.rs  main.rs  progress.rs
src/cmd/: clean.rs  init.rs  login.rs  mod.rs
src/cmd/clone/: mod.rs  statistics.rs
src/drive/: auth.rs  helper.rs  mod.rs
src/gps/: mod.rs
src/image/: copy.rs  inspect.rs  mod.rs
