[package]
name = "kapy-lite"
version = "0.1.0"
edition = "2024"
build = "build.rs"
authors = ["Seonghwan Jeong <scryner@gmail.com>"]
description = "Cli tool to copy photos with GPS information"
repository = "https://github.com/scryner/kapy-lite"
keywords = ["cli", "photo", "gps", "exif", "jpeg"]
license = "MIT"
exclude = ["sample/*"]

[[bin]]
name = "kapylite"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.37", features = ["derive"] }
console = "0.15.11"
gpx = "0.10.0"
home = "0.5.11"
indicatif = "0.17.11"
kapy-exif = { version = "0.1.1", features = ["full"] }
oauth2 = "5.0.0"
opener = "0.7.2"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.34"
tokio = { version = "1.44.2", features = ["full"] }
url = "2.5.4"
walkdir = "2.5.0"

[dev-dependencies]
serial_test = "3.2.0"
